--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@100;300;400;700&display=swap');
+
 body, html {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   background: url(./Assets/background.png);
   background-size: cover;
   background-repeat: no-repeat;
-  height: 100   vh;
+  height: 100vh;
   background-position: center;
+  font-family: 'Barlow', sans-serif;
+}
+
+.socialIcons {
+  border-top: solid 1px;
+}
+
+.socialIcons > a:first-of-type {
+  margin-left: 0px !important;
+}
+
+.content .contentBackgroundBlur {
+  width: 100%;
+  height: 100%;
+  background: black;
+  filter: blur(5px);
+  z-index: -1;
+  opacity: 0.5;
 }
