--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@100;300;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@100;300;400;700&display=swap");
 
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
 }
@@ -8,10 +9,9 @@ body, html {
 body {
   background: url(./Assets/background.png);
   background-size: cover;
-  background-repeat: no-repeat;
-  height: 100vh;
   background-position: center;
-  font-family: 'Barlow', sans-serif;
+  height: 100vh;
+  font-family: "Barlow", sans-serif;
 }
 
 .socialIcons {
@@ -22,11 +22,31 @@ body {
   margin-left: 0px !important;
 }
 
-.content .contentBackgroundBlur {
-  width: 100%;
-  height: 100%;
-  background: black;
+.content, .content--texts {
+  width: 35%;
+  height: 30%;
+  position: fixed;
+  bottom: 120px;
+  left: 48px;
+  z-index: 10;
+}
+
+.content {
+  overflow: hidden;
+}
+
+.content--texts {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.content--bluredBackground {
+  background-image: url(./Assets/background.png);
+  background-size: cover;
+  background-position: center;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  bottom: -120px;
+  left: -48px;
   filter: blur(5px);
-  z-index: -1;
-  opacity: 0.5;
 }
