--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,7 @@ body {
   background-position: center;
   height: 100vh;
   font-family: "Barlow", sans-serif;
+  font-size: 20px;
 }
 
 .socialIcons {
@@ -22,7 +23,8 @@ body {
   margin-left: 0px !important;
 }
 
-.content, .content--texts {
+.content,
+.content--texts {
   width: 35%;
   height: 30%;
   position: fixed;
@@ -49,4 +51,21 @@ body {
   bottom: -120px;
   left: -48px;
   filter: blur(5px);
+}
+
+.pages {
+  position: absolute;
+  color: var(--primary);
+  right: 48px;
+  bottom: 100px;
+  height: 35%;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  border-right: solid 1px;
+  align-items: flex-end;
+}
+
+.arrows {
+  transform: translateY(100%);
 }
